@@ -2053,6 +2053,8 @@ changes in sbcl-0.8.4 relative to sbcl-0.8.3:
     ** unsigned addition of a 32-bit constant with the high bit set no
        longer causes an internal compiler error on the x86.
     ** LOGBITP accepts a non-negative bignum as its INDEX argument.
+    ** compiler incorrectly derived types of DPB and DEPOSIT-FIELD
+       with negative last argument.
 
 planned incompatible changes in 0.8.x:
   * (not done yet, but planned:) When the profiling interface settles
